--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,7 +6,7 @@
     <div class="nav-links">
       <a href="{{ url_for('home') }}">Home</a>
       <a href="{{ url_for('produk') }}">Produk</a>
-      <a href="{{ url_for('download') }}">Artikel & Komentar</a>
+      <a href="{{ url_for('kontak') }}">Kontak</a>
     </div>
   </div>
 </nav>
